--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-table": "^8.11.7",
+    "@types/nodemailer": "^7.0.2",
     "@vercel/blob": "^0.22.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -35,6 +36,7 @@
     "next": "14.2.14",
     "next-auth": "^5.0.0-beta.21",
     "next-themes": "^0.2.1",
+    "nodemailer": "^7.0.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.49.3",
@@ -59,6 +61,3 @@
     "typescript": "^5.6.2"
   }
 }
-
-
-
