--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.312.0",
+    "nanoid": "^5.1.6",
     "next": "14.2.14",
     "next-auth": "^5.0.0-beta.21",
     "next-themes": "^0.2.1",
