--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "prisma generate && next build",
     "start": "next start -p 3001",
     "lint": "next lint --dir .",
-    "lint:fix": "next lint --dir . --fix"
+    "lint:fix": "next lint --dir . --fix",
+    "studio": "prisma studio"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.5.0",
@@ -44,6 +45,7 @@
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
+    "resend": "^3.2.0",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
