--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start -p 3001",
     "lint": "next lint --dir .",
     "lint:fix": "next lint --dir . --fix",
-    "studio": "prisma studio"
+    "studio": "dotenv -e .env.local -- prisma studio"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.5.0",
