--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tanstack/react-table": "^8.11.7",
     "@types/nodemailer": "^7.0.2",
     "@vercel/blob": "^0.22.3",
+    "adm-zip": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
