--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.5.0",
+    "@google-cloud/recaptcha-enterprise": "^6.3.1",
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.3.4",
